--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,12 +5,21 @@ Authors@R:
     person("Ivan", "Millanes", , "ivanmillanes26@gmail.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 License: GPL (>= 3)
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
 Depends: 
     R (>= 2.10)
+Imports: 
+    dplyr,
+    glue,
+    googledrive,
+    httr,
+    purrr,
+    readxl,
+    tidyr
+Suggests: 
+    readr,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Encoding: UTF-8
 LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
