--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,12 +8,15 @@ License: GPL (>= 3)
 Depends: 
     R (>= 2.10)
 Imports: 
+    bs4Dash,
     dplyr,
+    echarts4r,
     glue,
     googledrive,
     httr,
     purrr,
     readxl,
+    shiny,
     tidyr
 Suggests: 
     readr,
