feat: remove warnings from app packages imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,25 @@
 
 export(enron_download_data)
 export(enron_process_data)
+import(echarts4r)
+import(htmlwidgets)
+import(lubridate)
+importFrom(bs4Dash,box)
+importFrom(bs4Dash,dashboardBody)
+importFrom(bs4Dash,dashboardBrand)
+importFrom(bs4Dash,dashboardHeader)
+importFrom(bs4Dash,dashboardPage)
+importFrom(bs4Dash,dashboardSidebar)
+importFrom(bs4Dash,menuItem)
+importFrom(bs4Dash,progressBar)
+importFrom(bs4Dash,sidebarMenu)
+importFrom(bs4Dash,tabItem)
+importFrom(bs4Dash,tabItems)
+importFrom(shiny,a)
+importFrom(shiny,h1)
+importFrom(shiny,p)
+importFrom(shiny,reactive)
+importFrom(shiny,shinyApp)
+importFrom(shiny,strong)
+importFrom(shiny,tagList)
+importFrom(shinyWidgets,pickerInput)
