--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,15 @@
 Package: str.rdev
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
-Authors@R: NULL
-Description: What the package does (one paragraph).
-License: GPL (>= 3)
+Authors@R: 
+    person("Yan", "Zhang", , "yzhan559@jh.edu", role = c("aut", "cre"),
+           comment = c(ORCID = "YOUR-ORCID-ID"))
+Description: This package is designed for downloading, processing, and displaying visualizations based on the processed results from the Enron spreadsheet available on GitHub.
+Imports: dplyr, here, rio, tidyverse, purrr, tidyr, readr
+License: CC0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
