--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,11 @@
 
 export(enron_download_file)
 export(enron_process_data)
+import(dplyr)
+importFrom(here,here)
+importFrom(janitor,row_to_names)
+importFrom(readxl,read_excel)
+importFrom(tidyr,fill)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,pivot_wider)
+importFrom(utils,download.file)
