--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,5 +19,9 @@ Depends:
     R (>= 2.10)
 LazyData: true
 Suggests: 
+    ggplot2,
+    plotly,
+    shiny,
+    shinydashboard,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
