--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,11 @@ Imports:
     data.table,
     here,
     readxl,
-    tidyr
+    tidyr,
+    usethis
 Depends: 
     R (>= 2.10)
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+LazyData: true
