--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,28 @@
 Package: str.rdev
-Title: What the Package Does (One Line, Title Case)
+Title: Streamline R Developer Case Study
 Version: 0.0.0.9000
-Authors@R: NULL
-Description: What the package does (one paragraph).
+Authors@R: 
+    person("Jon", "Harmon", , "jonthegeek@gmail.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0003-4781-4346"))
+Description: Download and clean data from one particular spreadsheet of
+    the Enron Email Corpus.
 License: GPL (>= 3)
+URL: https://github.com/StreamlineDataScience/str.rdev
+BugReports: https://github.com/StreamlineDataScience/str.rdev/issues
+Imports: 
+    dplyr,
+    glue,
+    purrr,
+    readxl,
+    rlang,
+    tibble,
+    tidyr,
+    utils,
+    vctrs
+Suggests: 
+    testthat (>= 3.0.0),
+    withr
+Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
